dnl Process this file with autoconf to produce a configure script.
AC_INIT(creditcard/creditcard.c)
AM_INIT_AUTOMAKE(dict, "0.0.1 Alpha")
AC_CONFIG_SRCDIR(creditcard/creditcard.c)
AM_CONFIG_HEADER(config.h)

SHLIB_VERSION="1:1:0"
AC_SUBST(SHLIB_VERSION)

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_LIBTOOL
AC_PROG_INSTALL
AC_PROG_RANLIB

# Checks for header files.
AC_CHECK_HEADERS(stdarg.h stddef.h stdlib.h string.h limits.h unistd.h lib.h)

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_CHECK_TYPE(size_t)

AC_CONFIG_FILES([
	Makefile
	creditcard/Makefile
])
AC_OUTPUT